# auth-server

./: .dockerignore  Cargo.toml  Dockerfile  README.md
docker/: run-app.sh  start.sh  supervisord.conf
migrations/: 0002_auth_codes.sql  0003_email_verifications.sql  0004_device_authorizations.sql  0005_role_hierarchy.sql  0006_user_consents.sql  0007_logout_uris.sql  0008_claims_request.sql  0009_drop_redis_only_tables.sql  0010_password_resets.sql
src/: config.rs  db.rs  error.rs  main.rs  redis_pool.rs  state.rs
src/admin/: dto.rs  mod.rs  resource.rs
src/bootstrap/: admin.rs  lock.rs  mod.rs  role.rs  web_app_client.rs
src/client/: mod.rs  model.rs  repository.rs  secret.rs
src/common/: mod.rs
src/common/crypto/: argon2.rs  hmac_sha256.rs  jwt.rs  mod.rs  random_tokens.rs  rsa_keys.rs  sha256.rs
src/common/ratelimit/: mod.rs
src/common/redis/: json.rs  keys.rs  lua.rs  mod.rs
src/common/web/: bearer.rs  client_ip.rs  mod.rs
src/login/: dto.rs  mod.rs  page.rs  resource.rs  service.rs
src/oauth/: mod.rs  pkce.rs  resource.rs  scopes.rs
src/oauth/authorize/: claims.rs  code.rs  flow.rs  mod.rs  request_object.rs  result.rs
src/oauth/consent/: mod.rs  model.rs  pending_store.rs  repository.rs  resource.rs  service.rs
src/oauth/device/: flow.rs  mod.rs  model.rs  repository.rs  result.rs
src/oauth/logout/: flow.rs  mod.rs  notifier.rs  result.rs
src/oauth/token/: cleanup.rs  flow.rs  introspect.rs  issuer.rs  mod.rs  model.rs  repository.rs  result.rs  revoke.rs
src/oidc/: mod.rs  resource.rs
src/password/: flow.rs  mod.rs  model.rs  repository.rs  resource.rs
src/role/: mod.rs
src/session/: mod.rs  model.rs  repository.rs  service.rs
src/signup/: dto.rs  flow.rs  mod.rs  model.rs  repository.rs  resource.rs
src/user/: mod.rs
templates/: consent.html  login.html  logout.html
