[package]
name = "auth-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
actix-web = "4.13"
actix-cors = "0.7"
actix-files = "0.6"

# Async runtime (actix uses tokio)
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Database (sqlx, Postgres, migrations) — replaces Hibernate + Flyway
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Redis — replaces quarkus-redis-client
redis = { version = "0.27", features = [
    "tokio-comp",
    "connection-manager",
    "script",
    "json",
] }
deadpool-redis = "0.18"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# Templates — replaces Qute
askama = { version = "0.12", features = ["with-actix-web"] }
askama_actix = "0.14"

# Crypto: Argon2 (BouncyCastle replacement), RSA (JDK keypair replacement),
# JWT/JWS (SmallRye-jwt replacement), random tokens, SHA-256.
argon2 = "0.5"
rsa = { version = "0.9", features = ["sha2", "pem"] }
jsonwebtoken = "9"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
sha2 = "0.10"
hmac = "0.12"
subtle = "2"
base64 = "0.22"
hex = "0.4"

# Common helpers
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
urlencoding = "2"
regex = "1"

# HTTP client — backchannel logout notifier
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }

# Config + env
dotenvy = "0.15"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging / tracing — Quarkus JBoss log replacement
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-actix-web = "0.7"

# Metrics — Micrometer/Prometheus replacement
prometheus = "0.13"
actix-web-prom = "0.9"

# Scheduler — quarkus-scheduler replacement (for RefreshTokenCleanupJob)
tokio-cron-scheduler = "0.13"

# Lazy statics (edition 2024 has LazyLock but keep once_cell for compat)
once_cell = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
